# application

./: .gitignore  Dockerfile  Makefile  README.md  deploy.sh  models.dvc  pyproject.toml
.dvc/: config
.github/workflows/: deploy.yml  test.yml
cancer_estimator_application/: __init__.py  database.py  debug.py  main.py  models.py  predict.py
scripts/: bump_static.sh  deploy.sh
static/css/: index.css
static/js/: index.js
templates/: patient-profile-data.html  patient-profile.html  search-data.html  search.html
tests/: test_main.py
