[project]
name = "cancer-estimator-application"
version = "0.1.0"
description = "Cancer Estimator Application through Electronic Health Record"
authors = [
    {name = "Manoel Vilela", email = "manoelmvmn@ita.br"},
]
dependencies = [
    "fastapi>=0.111.0",
    "SQLAlchemy>=2.0.30",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.mypy]
ignore_missing_imports = true
