[project]
name = "cancer-estimator-application"
version = "0.1.0"
description = "Cancer Estimator Application through Electronic Health Record"
authors = [
    {name = "Manoel Vilela", email = "manoelmvmn@ita.br"},
]
dependencies = [
    "fastapi>=0.111.0",
    "SQLAlchemy>=2.0.30",
    "fasthx>=0.2403.1",
    "cancer-estimator-model @ git+https://github.com/cancer-estimator/model.git@0.1.0-dev2",
]
requires-python = "<3.12,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.mypy]
ignore_missing_imports = true
exclude =  [".venv"]

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "mypy>=1.10.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.8.2",
    "pytest>=8.2.2",
    "dvc[gdrive]>=3.50.1",
    "sqlalchemy-stubs>=0.4",
]

[tool.pdm.scripts]
lint = {composite = ["flake8", "mypy"]}
test = "pytest -vv -p no:cacheprovider --cov=cancer_estimator_application --cov-report term -k"
tests = {composite = ["test test"]}
check = {composite = ["lint cancer_estimator_application/", "test test"]}
